[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyilz"
version = "0.0.6"
authors = [
  { name="Nick Jordan", email="nickjordan289@gmail.com" },
]
description = "A Python Library for Illuvium Zero Land Management"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NickJordan289/pyilz"
"Bug Tracker" = "https://github.com/NickJordan289/pyilz/issues"